--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!--  -->
 	<script src="js/main.js"></script>
 	<link rel="stylesheet" href="css/style.css">
-	<title>Home | Crooked Pictures</title>
+	<title>Home | Omars Circus</title>
 
 <style type="text/css">
 	.trailersmalltext {
@@ -27,7 +27,7 @@
 			<!-- <img src="img/lancer2015background.jpg" height="400" width="590" align="right"> -->
 		<font>
 			<h2>
-				Welcome to Crooked Pictures!
+				Welcome to Omars Circus!
 			</h2>
 		</font>
 
