--- a/undermaintenance.html
+++ b/undermaintenance.html
@@ -10,7 +10,7 @@
 	<!--  -->
 	<script src="js/main.js"></script>
 	<link rel="stylesheet" href="css/style.css">
-	<title>Home | Omars Circus</title>
+	<title>Under Maintenance | Omars Circus</title>
 
 <style type="text/css">
 	.trailersmalltext {
@@ -24,12 +24,12 @@
 			<!-- <img src="img/lancer2015background.jpg" height="400" width="590" align="right"> -->
 		<font>
 			<h2>
-				Welcome to Omars Circus!
+				Under Maintenance
 			</h2>
 		</font>
 
 			<p class="lead">
-                Home of the Bella movie.
+                Sorry, But our website is still getting started.
            	</p>
 
 		</div>
