--- a/undermaintenance.html
+++ b/undermaintenance.html
@@ -29,7 +29,7 @@
 		</font>
 
 			<p class="lead">
-                Sorry, But our website is still getting started.
+                Sorry, Our website is currently offline.
            	</p>
 
 		</div>
