--- a/undermaintenance.html
+++ b/undermaintenance.html
@@ -19,6 +19,9 @@
 </style>
 
 <body class="background222" style="background-color: #007bff;">
+
+	$('#result').load('./header.html');
+
 	<div class="container">
 		<div class="jumbotron"> <!-- jumbotron col-md-6 offset-md-6 -->
 			<!-- <img src="img/lancer2015background.jpg" height="400" width="590" align="right"> -->
@@ -29,7 +32,7 @@
 		</font>
 
 			<p class="lead">
-                Sorry, Our website is currently offline.
+                Sorry, this website is currently offline.
            	</p>
 
 		</div>
