--- a/undermaintenance.html
+++ b/undermaintenance.html
@@ -11,7 +11,7 @@
 	<script src="js/main.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<title>Under Maintenance | Omars Circus</title>
-	<script>
+<script>
 function includeHTML() {
   var z, i, elmnt, file, xhttp;
   /*loop through a collection of all HTML elements:*/
@@ -48,7 +48,9 @@ function includeHTML() {
 </style>
 
 <body class="background222" style="background-color: #007bff;">
+
 	<div w3-include-html="header.html"></div>
+
 	<div class="container">
 		<div class="jumbotron"> <!-- jumbotron col-md-6 offset-md-6 -->
 			<!-- <img src="img/lancer2015background.jpg" height="400" width="590" align="right"> -->
@@ -64,8 +66,12 @@ function includeHTML() {
 
 		</div>
 	</div>
+
+	<div w3-include-html="footer.html"></div>
+
 	<script>
-includeHTML();
-</script>
+		includeHTML();
+	</script>
+
     </body>
 </html>
