--- a/footer.html
+++ b/footer.html
@@ -10,6 +10,7 @@
 		  padding: 8px;
 		  font-size: 16px;
 		  border: none;
+		  pointer-events: none;
 		}
 
 		.dropdown {
@@ -39,16 +40,11 @@
 
 		/* .dropdown:hover .dropbtn {background-color: #3e8e41;} */
 		.dropdown:hover .dropbtn {text-decoration: underline;}
-		.headerbutton:hover {text-decoration: underline;}
 
-		.headerbutton {
-		  color: #007bff;
-		  background-color: #FFFFFF;
-		  padding: 8px;
-		  font-size: 16px;
-    	  border: none;
-          outline: none !important;
-		}
+.buttonDisabled
+ {
+ Cursor:text !important; Text-Decoration: None !important; 
+ } 
 	</style>
 
 <style>
@@ -58,13 +54,9 @@
 </style>
 
 </body>
-<header>
+<footer>
 	<div class= "container">
 		<div class="row">
-			<div class="col">
-				<h5 style="margin-top:8px;">Omars Circus</h5>
-			</div>
-			
 			<div class="col">
 				<nav>
 					<!-- <ul class="nav justify-content-end">
@@ -72,15 +64,18 @@
 						<li class="nav-item"><a id="contact" class="nav-link" href="#">Contact</a></li>
 
 					</ul> -->
-					<button class="headerbutton" onclick="window.location='/';">Home</button>
-					<div class="dropdown" style="">
- 						<button class="dropbtn">Movie List</button>
+					<!-- <div class="dropdown" style="">
+ 						<button href="test.php" class="dropbtn">Movie List</button>
   						<div class="dropdown-content">
-    						<a href="/movies/bella">Bella</a>
+    						<a href="movies/bella.php">Bella</a>
+   							<a href="movies/bella-2.php">Bella 2</a>
+    						<a href="https://www.lifeisaardvark.tk/movies/my-family-car">My Family Car</a>
+    					</div> -->
+    					<div id="footer">
+        					<b><p align="middle" style="margin-bottom: -90px;">Copyright &copy; Crooked Pictures 2019</p></b>
     					</div>
   					</div>
-  					<button class="headerbutton" onclick="window.location='https://www.lifeisaardvark.tk';" style="margin-left:302px;">LIA Home</button>
 				</nav>
 			</div>
 		</div>
-</header>
+</footer>
