--- a/footer.html
+++ b/footer.html
@@ -72,7 +72,7 @@
     						<a href="https://www.lifeisaardvark.tk/movies/my-family-car">My Family Car</a>
     					</div> -->
     					<div id="footer">
-        					<b><p align="middle" style="margin-bottom: -90px;">Copyright &copy; Crooked Pictures 2019</p></b>
+        					<b><p align="middle" style="margin-bottom: -90px;">Copyright &copy; Killer Productions 2019</p></b>
     					</div>
   					</div>
 				</nav>
