--- a/undermaintenance.html
+++ b/undermaintenance.html
@@ -11,6 +11,8 @@
 	<script src="js/main.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<title>Under Maintenance | Omars Circus</title>
+	<link rel="icon" href="favicon.ico">
+
 <script>
 function includeHTML() {
   var z, i, elmnt, file, xhttp;
