--- a/undermaintenance.html
+++ b/undermaintenance.html
@@ -51,13 +51,13 @@ function includeHTML() {
 
 <body class="background222" style="background-color: #007bff;">
 
-	<div w3-include-html="header.html"></div>
+	<div w3-include-html="includes/header.html"></div>
 
 	<div class="container">
 		<div class="jumbotron"> <!-- jumbotron col-md-6 offset-md-6 -->
 			<!-- <img src="img/lancer2015background.jpg" height="400" width="590" align="right"> -->
 		<font>
-			<h2>
+			<h2 style="color: #007bff;">
 				Under Maintenance
 			</h2>
 		</font>
@@ -69,7 +69,7 @@ function includeHTML() {
 		</div>
 	</div>
 
-	<div w3-include-html="footer.html"></div>
+	<div w3-include-html="includes/footer.html"></div>
 
 	<script>
 		includeHTML();
