--- a/undermaintenance.html
+++ b/undermaintenance.html
@@ -51,7 +51,7 @@ function includeHTML() {
 
 <body class="background222" style="background-color: #007bff;">
 
-	<div w3-include-html="includes/header.html"></div>
+	<div w3-include-html="/includes/header.html"></div>
 
 	<div class="container">
 		<div class="jumbotron"> <!-- jumbotron col-md-6 offset-md-6 -->
@@ -69,7 +69,7 @@ function includeHTML() {
 		</div>
 	</div>
 
-	<div w3-include-html="includes/footer.html"></div>
+	<div w3-include-html="/includes/footer.html"></div>
 
 	<script>
 		includeHTML();
