--- a/undermaintenance.html
+++ b/undermaintenance.html
@@ -51,13 +51,13 @@ function includeHTML() {
 
 <body class="background222" style="background-color: #007bff;">
 
-	<div w3-include-html="/includes/header.html"></div>
+	<div w3-include-html="/includes/disabledheader.html"></div>
 
 	<div class="container">
 		<div class="jumbotron"> <!-- jumbotron col-md-6 offset-md-6 -->
 			<!-- <img src="img/lancer2015background.jpg" height="400" width="590" align="right"> -->
 		<font>
-			<h2 style="color: #007bff;">
+			<h2 style="color: #FF0000;">
 				Under Maintenance
 			</h2>
 		</font>
