--- a/addons/playaroundtwo/corruptpack/index.html
+++ b/addons/playaroundtwo/corruptpack/index.html
@@ -56,10 +56,10 @@ function includeHTML() {
 	<div class="container">
 
 			<h2>
-                Addons:
-           	</h2>
+                CorruptPack:
+            </h2>
 
-           	<button href="/addons/playaroundtwo">PlayAroundTwo</button>
+            <button href="../../../../content/files/2019/CorruptPack.addon">Download</button>
 
 	</div>
 
