--- a/addons/playaroundtwo/index.html
+++ b/addons/playaroundtwo/index.html
@@ -56,10 +56,10 @@ function includeHTML() {
 	<div class="container">
 
 			<h2>
-                Addons:
-           	</h2>
+                PlayAroundTwo Addons:
+            </h2>
 
-           	<button href="/addons/playaroundtwo">PlayAroundTwo</button>
+            <button href="/corruptpack">CorruptPack | Broken</button>
 
 	</div>
 
