--- a/addons.html
+++ b/addons.html
@@ -59,7 +59,7 @@ function includeHTML() {
                 Addons:
            	</h2>
 
-           	<button href="/addons/playaroundtwo">PlayAroundTwo</button>
+           	<button onclick="window.location='/addons/PlayAroundTwo';">PlayAroundTwo</button>
 
 	</div>
 
