--- a/addons/playaroundtwo/corruptpack/index.html
+++ b/addons/playaroundtwo/corruptpack/index.html
@@ -59,7 +59,7 @@ function includeHTML() {
                 CorruptPack:
             </h2>
 
-            <button href="../../../../content/files/2019/CorruptPack.addon">Download</button>
+            <button onclick="window.location='../../../../content/files/2019/CorruptPack.addon';">Download</button>
 
 	</div>
 
