--- a/addons/playaroundtwo/index.html
+++ b/addons/playaroundtwo/index.html
@@ -59,7 +59,7 @@ function includeHTML() {
                 PlayAroundTwo Addons:
             </h2>
 
-            <button href="/corruptpack">CorruptPack | Broken</button>
+            <button onclick="window.location='./corruptpack';">CorruptPack | Broken</button>
 
 	</div>
 
