--- a/addons/playaroundtwo/corruptpack/index.html
+++ b/addons/playaroundtwo/corruptpack/index.html
@@ -63,7 +63,7 @@ function includeHTML() {
 
 	</div>
 
-	<div w3-include-html="/includes/footer.html"></div>
+	<div w3-include-html="../../../../includes/footer.html"></div>
 
 	<script>
 		includeHTML();
