--- a/addons/playaroundtwo/corruptpack/index.html
+++ b/addons/playaroundtwo/corruptpack/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 	<meta charset="UTF-8">
 	<!-- jQuery, Popper and Bootstrap. -->
-	<script src="js/other/jquery/jquery-3.3.1.min.js"></script>
-	<script src="js/other/popper/popper.min.js"></script>
-	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
-	<script src="js/bootstrap/bootstrap.min.js"></script>
+	<script src="../../../../js/other/jquery/jquery-3.3.1.min.js"></script>
+	<script src="../../../../js/other/popper/popper.min.js"></script>
+	<link rel="stylesheet" href="../../../../css/bootstrap/bootstrap.min.css">
+	<script src="../../../../js/bootstrap/bootstrap.min.js"></script>
 
 	<!--  -->
-	<script src="js/main.js"></script>
-	<link rel="stylesheet" href="css/style.css">
+	<script src="../../../../js/main.js"></script>
+	<link rel="stylesheet" href="../../../../css/style.css">
 	<title>Addons | Omars Circus</title>
-	<link rel="icon" href="favicon.ico">
+	<link rel="icon" href="../../../../favicon.ico">
 
 <script>
 function includeHTML() {
@@ -51,7 +51,7 @@ function includeHTML() {
 
 <body class="background222" style="background-color: #007bff;">
 
-	<div w3-include-html="/includes/header.html"></div>
+	<div w3-include-html="../../../../includes/header.html"></div>
 
 	<div class="container">
 
