--- a/addons/playaroundtwo/index.html
+++ b/addons/playaroundtwo/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <html lang="en">
-	<meta charset="UTF-8">
-	<!-- jQuery, Popper and Bootstrap. -->
-	<script src="js/other/jquery/jquery-3.3.1.min.js"></script>
-	<script src="js/other/popper/popper.min.js"></script>
-	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
-	<script src="js/bootstrap/bootstrap.min.js"></script>
+    <meta charset="UTF-8">
+    <!-- jQuery, Popper and Bootstrap. -->
+    <script src="../../../js/other/jquery/jquery-3.3.1.min.js"></script>
+    <script src="../../../js/other/popper/popper.min.js"></script>
+    <link rel="stylesheet" href="../../../css/bootstrap/bootstrap.min.css">
+    <script src="../../../js/bootstrap/bootstrap.min.js"></script>
 
-	<!--  -->
-	<script src="js/main.js"></script>
-	<link rel="stylesheet" href="css/style.css">
-	<title>Addons | Omars Circus</title>
-	<link rel="icon" href="favicon.ico">
+    <!--  -->
+    <script src="../../../js/main.js"></script>
+    <link rel="stylesheet" href="../../../css/style.css">
+    <title>Addons | Omars Circus</title>
+    <link rel="icon" href="../../../favicon.ico">
 
 <script>
 function includeHTML() {
