--- a/addons/playaroundtwo/corruptpackfixed/index.html
+++ b/addons/playaroundtwo/corruptpackfixed/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <html lang="en">
-    <meta charset="UTF-8">
-    <!-- jQuery, Popper and Bootstrap. -->
-    <script src="../../../js/other/jquery/jquery-3.3.1.min.js"></script>
-    <script src="../../../js/other/popper/popper.min.js"></script>
-    <link rel="stylesheet" href="../../../css/bootstrap/bootstrap.min.css">
-    <script src="../../../js/bootstrap/bootstrap.min.js"></script>
+	<meta charset="UTF-8">
+	<!-- jQuery, Popper and Bootstrap. -->
+	<script src="../../../../js/other/jquery/jquery-3.3.1.min.js"></script>
+	<script src="../../../../js/other/popper/popper.min.js"></script>
+	<link rel="stylesheet" href="../../../../css/bootstrap/bootstrap.min.css">
+	<script src="../../../../js/bootstrap/bootstrap.min.js"></script>
 
-    <!--  -->
-    <script src="../../../js/main.js"></script>
-    <link rel="stylesheet" href="../../../css/style.css">
-    <title>Addons | Omars Circus</title>
-    <link rel="icon" href="../../../favicon.ico">
+	<!--  -->
+	<script src="../../../../js/main.js"></script>
+	<link rel="stylesheet" href="../../../../css/style.css">
+	<title>Addons | Omars Circus</title>
+	<link rel="icon" href="../../../../favicon.ico">
 
 <script>
 function includeHTML() {
@@ -51,20 +51,19 @@ function includeHTML() {
 
 <body class="background222" style="background-color: #007bff;">
 
-	<div w3-include-html="/includes/header.html"></div>
+	<div w3-include-html="../../../../includes/header.html"></div>
 
 	<div class="container">
 
 			<h2>
-                PlayAroundTwo Addons:
+                CorruptPack:
             </h2>
 
-            <button onclick="window.location='./corruptpack';">CorruptPack | Broken</button>
-            <button onclick="window.location='./corruptpackfixed';">CorruptPack | Fixed | STILL WORKING ON</button>
+            <button onclick="window.location='../../../../content/files/2019/CorruptPackFixed.addon';">Download</button>
 
 	</div>
 
-	<div w3-include-html="../../../includes/footer.html"></div>
+	<div w3-include-html="../../../../includes/footer.html"></div>
 
 	<script>
 		includeHTML();
