--- a/addons/playaroundtwo/corruptpackfixed/index.html
+++ b/addons/playaroundtwo/corruptpackfixed/index.html
@@ -56,7 +56,7 @@ function includeHTML() {
 	<div class="container">
 
 			<h2>
-                CorruptPack:
+                CorruptPack - Fixed:
             </h2>
 
             <button onclick="window.location='../../../../content/files/2019/CorruptPackFixed.addon';">Download</button>
