--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE HTML>
+<!-- <!DOCTYPE HTML>
 <html lang="en">
 	<meta charset="UTF-8">
-	<!-- jQuery, Popper and Bootstrap. -->
 	<script src="js/other/jquery/jquery-3.3.1.min.js"></script>
 	<script src="js/other/popper/popper.min.js"></script>
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
 	<script src="js/bootstrap/bootstrap.min.js"></script>
 
-	<!--  -->
 	<script src="js/main.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<title>Home | Omars Circus</title>
@@ -54,8 +52,8 @@ function includeHTML() {
 	<div w3-include-html="/includes/header.html"></div>
 
 	<div class="container">
-		<div class="jumbotron"> <!-- jumbotron col-md-6 offset-md-6 -->
-			<!-- <img src="img/lancer2015background.jpg" height="400" width="590" align="right"> -->
+		<div class="jumbotron">
+
 		<font>
 			<h2>
 				Welcome to Omars Circus!
@@ -76,4 +74,5 @@ function includeHTML() {
 	</script>
 
     </body>
-</html>
+</html>-->
+<h1 style="text-align: center;">FUCK YOU OMAR</h1>
